header plus about us: mobile + tablet

--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -1,3 +1,7 @@
+@import 'normalize';
+@import 'reset';
 @import 'variables';
 @import 'fonts';
 @import 'start';
+@import 'header';
+@import 'main-about';
