--- a/app/sass/_fonts.scss
+++ b/app/sass/_fonts.scss
@@ -1,3 +1,4 @@
+/* montserrat-regular - cyrillic */
 @font-face {
     font-family: 'Montserrat';
     font-style: normal;
@@ -5,14 +6,8 @@
     src: url('../fonts/montserrat-v25-cyrillic-regular.woff2') format('woff2'),
          url('../fonts/montserrat-v25-cyrillic-regular.woff') format('woff');
 }
-@font-face {
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 500;
-    src: url('../fonts/montserrat-v25-cyrillic-500.woff2') format('woff2'),
-         url('../fonts/montserrat-v25-cyrillic-500.woff') format('woff');
-}
-@font-face {
+  /* montserrat-700 - cyrillic */
+  @font-face {
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 700;
