--- a/app/sass/_start.scss
+++ b/app/sass/_start.scss
@@ -6,15 +6,15 @@
 .body {
     font-family: 'Montserrat', 'Times New Roman', sans-serif;
     font-style: normal;
-    font-weight: 500;
+    font-weight: 400;
     min-width: 375px;
 }
 
 .container {
-    max-width: 1076px;
+    max-width: 1380px;
     min-width: 375px;
     margin: 0 auto;
-    padding: 0 15px;
+    padding: 0 30px;
 }
 
 .img-responsive {
@@ -35,6 +35,14 @@
 
 .a {
     &:hover {  
-        color: yellow;
+        color: $active-hover;
     }
+}
+
+.picture {
+    background-image: url(../img/team.png);
+}
+
+.backgroung-main {
+    background-color: $grey-bg;
 }
