--- a/app/css/style.css
+++ b/app/css/style.css
@@ -431,6 +431,13 @@ table {
   padding: 0 30px;
 }
 
+.container_small {
+  max-width: 1080px;
+  min-width: 375px;
+  margin: 0 auto;
+  padding: 0 30px;
+}
+
 .img-responsive {
   max-width: 100%;
   height: auto;
@@ -701,10 +708,7 @@ table {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
-  padding: 0px 30px;
-  gap: 30px;
-  height: 991px;
-  margin: 30px -30px 30px -30px;
+  padding: 30px;
 }
 
 .section-one__text {
@@ -720,6 +724,7 @@ table {
           align-items: flex-start;
   padding: 0px;
   gap: 28px;
+  margin-right: 30px;
 }
 
 .section-one__text p {
@@ -740,7 +745,8 @@ table {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
-  padding: 0px;
+  border-left: 4px solid #E6E6F0;
+  padding-left: 30px;
 }
 
 .section-one__figures-box {
@@ -768,11 +774,8 @@ table {
   margin-left: 8px;
 }
 
-.section-one__figures p {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 20px;
-  color: #323264;
+.section-one__figures > :nth-child(2n) {
+  margin-bottom: 40px;
 }
 
 .title {
@@ -825,15 +828,8 @@ table {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
-  padding: 0px 30px;
-  gap: 30px;
-  height: 751px;
-  margin: 30px -30px 60px -30px;
-}
-
-.section-two__text {
-  width: 315px;
-  height: 610px;
+  padding: 30px;
+  margin-bottom: 30px;
 }
 
 .section-two__text p {
@@ -841,11 +837,11 @@ table {
   font-size: 19px;
   line-height: 30px;
   color: #000000;
+  margin-bottom: 30px;
 }
 
-.section-two__headline {
-  width: 315px;
-  height: 111px;
+.achieve {
+  padding: 30px 60px;
 }
 
 .achieve__text {
@@ -859,30 +855,54 @@ table {
   padding-bottom: 30px;
 }
 
+.achieve__block {
+  margin-bottom: 30px;
+}
+
 .achieve__block-one {
+  display: none;
   padding: 0px;
-  gap: 40px;
-  width: 255px;
-  height: 90px;
   background: #FFFFFF;
+  border-radius: 12px;
+}
+
+.achieve__block > :nth-child(1) {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+}
+
+.achieve__points {
+  margin: 0 auto;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.achieve__points .point {
+  display: inline-block;
+  margin: 0 7px;
+  border-radius: 50%;
+  width: 16px;
+  height: 16px;
+  background-color: #24A3FF;
+  opacity: 0.2;
+}
+
+.achieve__points .point.active {
+  opacity: 1;
 }
 
 @media (min-width: 768px) {
   .section-one {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
-    padding: 0px 60px;
-    gap: 30px;
-    height: 742px;
-    margin: 60px -60px 60px -60px;
+    padding: 60px;
   }
   .section-one__text {
     display: -webkit-box;
@@ -896,9 +916,7 @@ table {
         -ms-flex-align: start;
             align-items: flex-start;
     padding: 0px;
-    gap: 28px;
     width: 648px;
-    height: 410px;
   }
   .picture {
     height: 233.6px;
@@ -933,14 +951,7 @@ table {
     -webkit-box-align: start;
         -ms-flex-align: start;
             align-items: flex-start;
-    padding: 0px 60px;
-    gap: 30px;
-    height: 432px;
-    margin: 60px -60px 60px -60px;
-  }
-  .section-two__text {
-    width: 648px;
-    height: 310px;
+    padding: 60px;
   }
   .section-two__headline {
     width: 648px;
@@ -953,27 +964,40 @@ table {
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     -webkit-box-align: start;
         -ms-flex-align: start;
             align-items: flex-start;
     padding: 0px;
-    gap: 40px;
     width: 648px;
-    height: 90px;
   }
-  .achieve__block-one {
-    width: 132px;
+  .achieve__block > :nth-child(n) {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: calc(25% - 30px);
     height: 90px;
     background: #FFFFFF;
     border-radius: 12px;
+  }
+  .achieve__block .pic {
+    max-width: 100%;
+  }
+  .achieve__points .hidden {
+    display: none;
   }
 }
 
 @media (min-width: 992px) {
   .section-one {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
@@ -981,13 +1005,10 @@ table {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    padding: 0px 60px;
-    gap: 30px;
-    height: 470px;
-    margin: 60px -60px 60px -60px;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    padding: 60px;
   }
   .section-one__text {
     display: -webkit-box;
@@ -1001,11 +1022,10 @@ table {
         -ms-flex-align: start;
             align-items: flex-start;
     padding: 0px;
-    gap: 28px;
-    height: 470px;
+    width: 60%;
   }
-  .picture {
-    height: 311.47px;
+  .section-one__figures {
+    width: 35%;
   }
   .section-two {
     display: -webkit-box;
@@ -1021,17 +1041,13 @@ table {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
-    padding: 0px 60px;
-    gap: 60px;
-    height: 400px;
-    margin: 60px -60px 60px -60px;
+    padding: 60px;
   }
   .section-two__text {
-    width: 482px;
-    height: 400px;
+    width: 60%;
   }
   .section-two__headline {
-    width: 362px;
+    width: 35%;
   }
   .achieve {
     display: -webkit-box;
@@ -1045,32 +1061,6 @@ table {
         -ms-flex-align: center;
             align-items: center;
     padding: 30px 60px;
-  }
-  .achieve__block {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
-    margin: 0 -20px;
-    width: 904px;
-    height: 110px;
-  }
-  .achieve__block-one {
-    width: 25%;
-    height: 110px;
-    padding: 0 20px;
-    background: #FFFFFF;
-    border-radius: 12px;
-  }
-  .pic {
-    text-align: center;
-    padding: 25px;
   }
 }
 
