--- a/app/sass/_start.scss
+++ b/app/sass/_start.scss
@@ -17,6 +17,13 @@
     padding: 0 30px;
 }
 
+.container_small{
+    max-width: 1080px;
+    min-width: 375px;
+    margin: 0 auto;
+    padding: 0 30px;
+}
+
 .img-responsive {
     max-width: 100%;
     height: auto;
