--- a/app/sass/_main-about.scss
+++ b/app/sass/_main-about.scss
@@ -210,7 +210,7 @@
             justify-content: space-between;
             align-items: flex-start;
             padding: 0px;
-            width: 648px;
+            width: 100%;
             
             & > :nth-child(n){
                 display: flex;
