--- a/app/sass/_homepage.scss
+++ b/app/sass/_homepage.scss
@@ -24,6 +24,7 @@
     display: flex;
     flex-direction: column;
     gap: 30px;
+    overflow: hidden;
 
     &__list {
         display: flex;
@@ -67,48 +68,66 @@
     }  
 }
 
-.title-blue {
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 17px;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    color: $active-regular;
+.what {
+    padding: 30px 0;
+    
+    .cards {
+        display: flex;
+        flex-direction: column;
+
+        &__one {
+            margin-top: 30px;
+        }
+
+        .head-blue {
+            font-weight: 700;
+            font-size: 22px;
+            line-height: 27px;
+            color: $active-regular;
+            margin: 30px 0 15px;
+        }
+        
+        .p-blue {
+            font-size: 16px;
+            line-height: 26px;
+            color: $white;
+        }
+    }
 }
 
-.title-pink {
-    font-weight: 700;
-    font-size: 30px;
-    line-height: 37px;
-    background: linear-gradient(90.13deg, #F0145A 0.84%, #EF8080 99.96%);
-    background-clip: text;
-    text-fill-color: transparent;
-}
+.man {
+    display: flex;
+    flex-direction: column;
+    margin-top: 30px;
 
-.head-blue {
-    font-weight: 700;
-    font-size: 22px;
-    line-height: 27px;
-    color: $active-regular;
-}
+    &__pic {
+        background-image: url(../img/man-1.png);
+        background-position: center center;
+        background-size: cover;
+        height: 500px;
+        border-radius: 12px 12px 0px 0px;
+    }
 
-.p-blue {
-    font-size: 16px;
-    line-height: 26px;
-    color: $white;
-}
+    &__text {
+        background-color: $grey-bg;
+        padding: 30px;
+        border-radius: 0 0 12px 12px;
+    }
 
-.title-name {
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 20px;
-    color: $grey-text;
-}
+    .title-name {
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 20px;
+        color: $grey-text;
+        margin-top: 30px;
+    }
+    
+    .position-name {
+        font-size: 14px;
+        line-height: 22px;
+        color: $grey-text;
+    }
 
-.position-name {
-    font-size: 14px;
-    line-height: 22px;
-    color: $grey-text;
 }
 
 .trust {
@@ -118,6 +137,26 @@
     letter-spacing: 1px;
     text-transform: uppercase;
     color: $main;
+    text-align: center;
+    padding: 30px 0;
+}
+
+.pics-wrap {
+    display: flex;
+    flex-direction: column;
+}
+
+.trust-pics {
+    width: 100%;
+
+    &-hidden {
+        display: none;
+    }
+}
+
+.publications {
+    background: $grey-bg;
+    padding: 30px;
 }
 
 .p-title {
@@ -125,6 +164,40 @@
     font-size: 16px;
     line-height: 20px;
     color: $active-regular;
+    padding: 30px 0 15px;
+}
+
+.publications-card__one {
+    margin-top: 30px;
+    background-color: $white;
+    border-radius: 12px;
+
+    .card__img {
+        height: 200px;
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        border-radius: 12px 12px 0 0;
+        width: 100%;
+
+        &-ass {
+            background-image: url(../img/associate.png);
+        }
+        &-gd {
+            background-image: url(../img/gd.png);
+        }
+        &-mill {
+            background-image: url(../img/millenial.png);
+        }
+    }
+
+    & > p {
+        margin: 0 30px;
+    }
+
+    & > img {
+        width: 100%;
+    }
 }
 
 .p-date {
@@ -134,23 +207,133 @@
     letter-spacing: 1px;
     text-transform: uppercase;
     color: $grey-text;
+    padding-bottom: 15px;
+    border-bottom: 4px solid $grey-separator;
 }
 
 .p-description {
     font-size: 14px;
     line-height: 22px;
     color: #000000;
+    padding-top: 15px;
+    padding-bottom: 30px;
 }
 
 
-// @media (min-width:768px) {
+@media (min-width: 768px) {
     .gradient {
         background-size: 893px 1024px, cover;
     }
+    .title-white {
+        margin: 269px 0 417px;
+    }
     
-// }
+    .what {
+        .cards {
+            flex-direction: row;
+            flex-wrap: wrap;
+            margin: 0 -30px;
+    
+            &__one {
+                width: 50%;
+                padding: 0 30px;
+            }
+        }
+    }
+    .man {
+        &__pic {
+            background-image: url(../img/man.png);
+            width: 648px;
+            height: 500px;
+        }
+    }
+
+    .pics-wrap {
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+
+    .trust-pics {
+        width: 33.3%;
+
+        &-hidden {
+            display: inline-block;
+        }
+    }
+
+    .publications-card {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        flex-wrap: wrap;
+
+        &__one {
+            width: calc(50% - 15px);
+
+            &.millenial {
+                width: 100%;
+            }
+        }
+    }
 
 
-// @media (min-width: 992px) {
+}
 
-// }
+
+@media (min-width: 992px) {
+
+    .title-white {
+        margin: 245px 0 289px;
+    }
+    .consistent {
+        flex-direction: row;
+    
+        &__list {
+            flex-direction: column;
+        }
+
+        .line {
+            width: 4px;
+            height: auto;
+        }
+    }
+    
+    .what .cards__one {
+        width: 33.3%;
+    }
+
+    .man {
+        display: flex;
+        flex-direction: row;
+
+        &__pic {
+            background-image: url(../img/man-1.png);
+            height: 528px;
+            width: 400px;
+        }
+
+        &__text {
+            width: calc(100% - 400px);
+        }
+    }
+
+    .trust-pics {
+        width: 25%;
+    }
+
+    .publications-card {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        margin: 0 -15px;
+
+        &__one {
+            width: calc(33% - 15px);
+            
+            &.millenial {
+                width: calc(33% - 15px);
+            }
+        }
+    }
+
+}
