--- a/app/sass/_start.scss
+++ b/app/sass/_start.scss
@@ -84,3 +84,28 @@
         }
     }
 }
+
+.title-blue {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 17px;
+    letter-spacing: 1px;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: $active-regular;
+    margin-bottom: 10px;
+    transition: 250ms;
+
+    &:hover {
+        color: $accent;
+    }
+}
+
+.title-pink {
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 37px;
+    background: linear-gradient(90.13deg, #F0145A 0.84%, #EF8080 99.96%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
